// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetTokenPage page should match the snapshot 1`] = `
<div>
  <p
    class="chakra-text css-in3yi3"
  >
    Access Token
  </p>
  <p />
  <hr />
  <p
    class="chakra-text css-in3yi3"
  >
    Id Token
  </p>
  <p />
</div>
`;

exports[`GetTokenPage page should match the snapshot layout 1`] = `
<div>
  <div
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <p
        class="chakra-text css-in3yi3"
      >
        Access Token
      </p>
      <p />
      <hr />
      <p
        class="chakra-text css-in3yi3"
      >
        Id Token
      </p>
      <p />
    </div>
  </div>
</div>
`;
